# euclidian

./: .bumpversion.cfg  .gitignore  CHANGES.txt  MANIFEST  MANIFEST.in  README.rst  README.txt  setup.cfg  setup.py
euclidian/: cartesian.py  cartesian2.py  cartesian3.py  clipping.py  graycode.py  util.py
src/euclidian/: cartesian2.py  cartesian3.py  flipping.py  graycode.py  util.py  version.py
test/test_cartestian2/: test_transform2.py
tests/test_cartesian2/: test_transform2.py
tests/test_cartesian3/: test_direction3.py
