[metadata]
name = euclidian
version = attr: euclidian.version.__version__
description = Set partitioning
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/x-rst
url = https://github.com/rob-smallshire/euclidian
author = Sixty North
author_email: systems+euclidian@sixty-north.com
keywords = geometry vector point shape transformations
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:

[options.extras_require]
dev = bumpversion
test = pytest

[options.packages.find]
where = src